Adding .env.example file

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "serve": "nodemon --watch controllers --watch models --watch router --watch views --watch src"
   },
   "keywords": [],
   "author": "",
